<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/themeBackground"
    >

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/themeBackground">

        <ImageView
            android:id="@+id/addNoteImage"
            android:layout_width="140dp"
            android:layout_height="140dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:src="@drawable/add_note_final"
            android:scaleType="centerCrop"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/adding_note" />

        <TextView
            android:id="@+id/notesAddingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adding_note"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="150dp"
            app:layout_constraintTop_toTopOf="@+id/addNoteImage" />

        <EditText
            android:id="@+id/notesAddingTitleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/notesAddingTitle"
            android:layout_marginTop="120dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:hint="@string/add_note_title"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:background="@drawable/shape_border"
            android:padding="20dp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/notesAddingDescriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_border"
            android:hint="@string/add_note_description"
            android:inputType="textMultiLine"
            android:padding="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/notesAddingTitleEditText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:autofillHints="" />

        <Button
            android:id="@+id/addNoteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/notesAddingDescriptionEditText"
            android:layout_marginTop="90dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:padding="13dp"
            android:text="@string/add_note_button"
            android:backgroundTint="@color/buttonEnabled" />

        <Button
            android:id="@+id/cancelNoteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/addNoteButton"
            android:layout_marginTop="160dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:padding="12dp"
            android:text="@string/cancel"
            android:backgroundTint="@color/buttonCancel" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>