<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/themeBackground">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/themeBackground">

        <ImageView
            android:id="@+id/imageRegistration"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"
            android:src="@drawable/key">

        </ImageView>

        <TextView
            android:id="@+id/textRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/text"
            android:textStyle="bold"
            android:textSize="36sp"
            app:layout_constraintTop_toBottomOf="@id/imageRegistration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp">
        </TextView>

        <TextView
            android:id="@+id/textRegistrationRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registrate"
            android:textColor="@color/text"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/textRegistration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:hintTextColor="@color/black"
            app:endIconTint="@color/black"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"

            app:layout_constraintTop_toBottomOf="@id/textRegistrationRegister"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            app:helperText="@string/helper"
            app:helperTextTextColor="@color/helperRequired"
            android:id="@+id/nameFieldRegistration">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_border"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textCursorDrawable="@drawable/curson_drawable"
                android:cursorVisible="true"
                android:inputType="textEmailAddress"
                android:hint="@string/name"
                android:id="@+id/nameRegistrationEditText"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:hintTextColor="@color/black"
            app:endIconTint="@color/black"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"

            app:layout_constraintTop_toBottomOf="@id/nameFieldRegistration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            app:helperText="@string/helper"
            app:helperTextTextColor="@color/helperRequired"
            android:id="@+id/emailFieldRegistration">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_border"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textCursorDrawable="@drawable/curson_drawable"
                android:cursorVisible="true"
                android:inputType="textEmailAddress"
                android:hint="@string/email_hint"
                android:id="@+id/emailRegistrationEditText"/>


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/black"
            app:endIconTint="@color/black"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:helperTextTextColor="@color/helperRequired"

            app:helperText="@string/helper"

            app:layout_constraintTop_toBottomOf="@id/emailFieldRegistration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="1dp"

            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:id="@+id/passwordFieldRegistration"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordRegistrationEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass_hint"
                android:inputType="textPassword"
                android:background="@drawable/shape_border"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textCursorDrawable="@drawable/curson_drawable"
                android:cursorVisible="true"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:hintTextColor="@color/black"
            app:endIconTint="@color/black"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"

            app:layout_constraintTop_toBottomOf="@id/passwordFieldRegistration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            app:helperText="@string/helper"
            app:helperTextTextColor="@color/helperRequired"
            android:id="@+id/reenterPasswordField">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_border"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textCursorDrawable="@drawable/curson_drawable"
                android:cursorVisible="true"
                android:inputType="textEmailAddress"
                android:hint="@string/reenterPassword"
                android:id="@+id/reenterPasswordEditText"/>


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:backgroundTint="@color/textDark"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reenterPasswordField"
            android:layout_marginTop="30dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:textSize="20sp"
            android:padding="13dp"
            android:enabled="false"
            android:id="@+id/registerButton">
        </Button>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>