<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/themeBackground">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/themeBackground">

        <ImageView
            android:id="@+id/imageNote"
            android:layout_width="160dp"
            android:layout_height="160dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="40dp"
            android:src="@drawable/note_login">

        </ImageView>

        <TextView
            android:id="@+id/textLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/text"
            android:textStyle="bold"
            android:textSize="36sp"
            app:layout_constraintTop_toBottomOf="@id/imageNote"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp">
        </TextView>

        <TextView
            android:id="@+id/textLoginLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:textColor="@color/text"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/textLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:hintTextColor="@color/black"
            app:endIconTint="@color/black"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"

            app:layout_constraintTop_toBottomOf="@id/textLoginLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            app:helperText="@string/helper"
            app:helperTextTextColor="@color/helperRequired"
            android:id="@+id/emailField">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_border"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textCursorDrawable="@drawable/curson_drawable"
                android:cursorVisible="true"
                android:inputType="textEmailAddress"
                android:hint="@string/email_hint"
                android:id="@+id/emailEditText"/>


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/black"
            app:endIconTint="@color/black"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:helperTextTextColor="@color/helperRequired"

            app:helperText="@string/helper"

            app:layout_constraintTop_toBottomOf="@id/emailField"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:id="@+id/passwordField"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass_hint"
                android:inputType="textPassword"
                android:background="@drawable/shape_border"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textCursorDrawable="@drawable/curson_drawable"
                android:cursorVisible="true"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:backgroundTint="@color/textDark"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordField"
            android:layout_marginTop="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:textSize="20sp"
            android:padding="13dp"
            android:enabled="false"
            android:id="@+id/loginButton">
        </Button>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>